# ffmpeg-android

./: .gitignore  README.md
android/: gradle.properties
android/app/: CMakeLists.txt  build.gradle
android/app/src/androidTest/java/com/viper/android/ffmpeg/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: native-lib.cpp
android/app/src/main/java/com/viper/android/ffmpeg/: BaseActivity.java  FFmpegApp.java  FFmpegInfoActivity.java  MainActivity.java  StartActivity.java
android/app/src/main/java/com/viper/android/widget/: ViperButton.java
android/app/src/main/res/layout/: activity_main.xml  activity_show_ffmpeg_info.xml
android/app/src/test/java/com/viper/android/ffmpeg/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
